# ncnn

./: .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt  benchncnn.cpp
build_vs2015/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt  ncnn.sln
build_vs2015/benchmark/: INSTALL.vcxproj  INSTALL.vcxproj.filters  benchncnn.vcxproj  benchncnn.vcxproj.filters  cmake_install.cmake
build_vs2015/benchmark/benchncnn.dir/Release/benchncnn.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_vs2015/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  fasterrcnn.vcxproj  fasterrcnn.vcxproj.filters  s3fd.vcxproj  s3fd.vcxproj.filters  squeezenet.vcxproj  squeezenet.vcxproj.filters
build_vs2015/examples/squeezenet.dir/Release/: squeezenet.vcxprojResolveAssemblyReference.cache
build_vs2015/examples/ssd/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  ssdmobilenet.vcxproj  ssdmobilenet.vcxproj.filters  ssdsqueezenet.vcxproj  ssdsqueezenet.vcxproj.filters
build_vs2015/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  ncnn.vcxproj  ncnn.vcxproj.filters
build_vs2015/tools/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  ncnn2mem.vcxproj  ncnn2mem.vcxproj.filters
build_vs2015/tools/caffe/: INSTALL.vcxproj  INSTALL.vcxproj.filters  caffe.pb.cc  caffe.pb.h  caffe2ncnn.vcxproj  caffe2ncnn.vcxproj.filters  cmake_install.cmake
build_vs2015/tools/mxnet/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  mxnet2ncnn.vcxproj  mxnet2ncnn.vcxproj.filters
build_vs2015/tools/ncnn2mem.dir/Debug/: ncnn2mem.vcxprojResolveAssemblyReference.cache
build_vs2015/tools/onnx/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  onnx.pb.cc  onnx.pb.h  onnx2ncnn.vcxproj  onnx2ncnn.vcxproj.filters
examples/: CMakeLists.txt  debug_test.cpp  detection_queue.h  s3fd - 副本.cpp  s3fd.cpp  s3fd_face_detector.cpp  s3fd_face_detector.h  smooth_face_bbox.cpp  smooth_face_bbox.h  squeezenet.cpp
examples/ssd/: CMakeLists.txt  squeezenet_ssd_voc_deploy.prototxt  ssdmobilenet.cpp  ssdsqueezenet.cpp
src/: CMakeLists.txt
tools/: CMakeLists.txt
tools/caffe/: caffe.proto  caffe2ncnn.cpp
(+80 files in other folders)
